--- a/WebContent/jasperReports/CanteenItemsReport.jrxml
+++ b/WebContent/jasperReports/CanteenItemsReport.jrxml
@@ -13,7 +13,7 @@
 		<band height="60" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="254" y="20" width="252" height="20"/>
