--- a/WebContent/jasperReports/DailyAttendanceReport.jrxml
+++ b/WebContent/jasperReports/DailyAttendanceReport.jrxml
@@ -16,7 +16,7 @@
 		<band height="111" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField pattern="dd-MMM-yyyy">
 				<reportElement x="580" y="47" width="141" height="20"/>
