--- a/WebContent/jasperReports/DepartmentSummaryReport.jrxml
+++ b/WebContent/jasperReports/DepartmentSummaryReport.jrxml
@@ -82,7 +82,7 @@
 		<band height="49" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="222" y="18" width="270" height="18"/>
