--- a/WebContent/jasperReports/EmployeePersonalDetailsReport.jrxml
+++ b/WebContent/jasperReports/EmployeePersonalDetailsReport.jrxml
@@ -20,7 +20,7 @@
 		<band height="79" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="319" y="37" width="209" height="20"/>
