--- a/WebContent/jasperReports/EmployeeWiseReport.jrxml
+++ b/WebContent/jasperReports/EmployeeWiseReport.jrxml
@@ -16,7 +16,7 @@
 		<band height="79" splitType="Stretch">
 		<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField pattern="dd-MMM-yyyy">
 				<reportElement x="648" y="0" width="90" height="20"/>
