--- a/WebContent/jasperReports/LeaveReport.jrxml
+++ b/WebContent/jasperReports/LeaveReport.jrxml
@@ -21,7 +21,7 @@
 		<band height="79" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="231" y="30" width="85" height="20"/>
