--- a/WebContent/jasperReports/LeaveStatusReport.jrxml
+++ b/WebContent/jasperReports/LeaveStatusReport.jrxml
@@ -20,7 +20,7 @@
 		<band height="93" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="216" y="10" width="122" height="20"/>
