--- a/WebContent/jasperReports/MonthlyAttendanceReport2.jrxml
+++ b/WebContent/jasperReports/MonthlyAttendanceReport2.jrxml
@@ -259,7 +259,7 @@
 		<band height="80" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="647" y="24" width="140" height="18"/>
