--- a/WebContent/jasperReports/ShiftWiseEarlyGoingReport.jrxml
+++ b/WebContent/jasperReports/ShiftWiseEarlyGoingReport.jrxml
@@ -20,7 +20,7 @@
 		<band height="99" splitType="Stretch">
 		<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="200" y="50" width="100" height="20"/>
