--- a/WebContent/jasperReports/ShiftWiseLateComingReport.jrxml
+++ b/WebContent/jasperReports/ShiftWiseLateComingReport.jrxml
@@ -19,7 +19,7 @@
 		<band height="79" splitType="Stretch">
 		<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="180" y="28" width="155" height="20"/>
