--- a/WebContent/jasperReports/ShiftWiseReport.jrxml
+++ b/WebContent/jasperReports/ShiftWiseReport.jrxml
@@ -20,7 +20,7 @@
 		<band height="89" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="235" y="59" width="100" height="20"/>
