--- a/WebContent/jasperReports/ShortWorkReport.jrxml
+++ b/WebContent/jasperReports/ShortWorkReport.jrxml
@@ -22,7 +22,7 @@
 		<band height="93" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="380" y="2" width="200" height="25"/>
