--- a/WebContent/jasperReports/VehicleLogsFrequencyReport.jrxml
+++ b/WebContent/jasperReports/VehicleLogsFrequencyReport.jrxml
@@ -22,7 +22,7 @@
 		<band height="60" splitType="Stretch">
 			<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="456" y="20" width="252" height="20"/>
