--- a/WebContent/jasperReports/VisitorsDailyReportEmployeeWithPhoto.jrxml
+++ b/WebContent/jasperReports/VisitorsDailyReportEmployeeWithPhoto.jrxml
@@ -17,7 +17,7 @@
 		<band height="79" splitType="Stretch">
 		<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="317" y="16" width="351" height="28"/>
