--- a/WebContent/jasperReports/VisitorsDailyReportVisitorWithPhoto.jrxml
+++ b/WebContent/jasperReports/VisitorsDailyReportVisitorWithPhoto.jrxml
@@ -21,7 +21,7 @@
 		<band height="185" splitType="Stretch">
 		<image>
 				<reportElement  x="27" y="0" width="100" height="35"/>
-				<imageExpression><![CDATA[$P{imagePath}+"/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagePath}+"/sensedgelogo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="205" y="12" width="351" height="28"/>
@@ -60,7 +60,7 @@
 			</staticText>
 			<image hAlign="Center" vAlign="Middle" isLazy="true" onErrorType="Blank">
 				<reportElement x="617" y="68" width="128" height="96"/>
-				<imageExpression><![CDATA[$P{folderPath}+$F{visitorPhoto}]]></imageExpression>
+				<imageExpression><![CDATA[$P{profilePhoto}]]></imageExpression>
 			</image>
 		</band>
 	</title>
